--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -11,7 +11,7 @@ COPY requirements.txt .
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Copy the rest of the application code into the container
-COPY . .
+COPY .. .
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
