--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.1.1
-selenium==4.1.1
-requests==2.27.1
-robotexclusionrulesparser==1.7.2
+selenium==4.1.0
 validators==0.18.2
-xmltodict==0.12.0
+concurrent.futures==3.3.0
+robotexclusionrulesparser==1.7.0
+requests==2.26.0
+hashlib==20081126
+xml.etree.ElementTree==1.3.0
