--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Flask==2.1.1
-selenium==4.1.0
-validators==0.18.2
-concurrent.futures==3.3.0
-robotexclusionrulesparser==1.7.0
-requests==2.26.0
-hashlib==20081126
-xml.etree.ElementTree==1.3.0
+flask
+selenium
+validators
+robotexclusionrulesparser
+requests
